# kapture-game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  build.sh  data.txt  debug.sh  lisez-moi.txt  main.cpp
include/: unitObstacle.h  uniteObstacleFactory.h
include/commands/: EndTurnCommand.h  MoveCommand.h  command.h  stop.h
include/game/: TurnManager.h  cellule.h  drapeau.h  joueur.h  kaptureGame.h  plateau.h
include/obstacles/: foret.h  obstacle.h  riviere.h  terrainNu.h
include/units/: chairACanon.h  eclaireur.h  troupeDeChoc.h  unite.h
src/: unitObstacle.cpp  uniteObstacleFactory.cpp
src/commands/: EndTurnCommand.cpp  MoveCommand.cpp  command.cpp  stop.cpp
src/game/: cellule.cpp  drapeau.cpp  joueur.cpp
src/obstacles/: foret.cpp  obstacle.cpp  riviere.cpp  terrainNu.cpp
src/unites/: chairACanon.cpp  eclaireur.cpp  troupeDeChoc.cpp  unite.cpp
test/: fightTest.cpp  fightTest.h  kaptureGameTest.cpp  kaptureGameTest.h  test.cpp
